trunk/Archive2/03/fd3da804089fe9/output
main.cpp: In function 'int main()':
main.cpp:11:31: error: aggregate 'print_type<char (*)[11]> _' has incomplete type and cannot be defined
    print_type<decltype(&abc)> _;
                               ^
